--- a/AudEnglishFree/res/values/strings.xml
+++ b/AudEnglishFree/res/values/strings.xml
@@ -1,5 +1,3 @@
 <resources>
-
-    <string name="app_name">AudEnglishFree</string>
-
+    <string name="app_name">AudEnglish</string>	
 </resources>
